--- a/views/search.ejs
+++ b/views/search.ejs
@@ -14,7 +14,7 @@
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
-            <a class="navbar-brand mr-auto mr-lg-0" href="/">Auntie</a> 
+            <a class="navbar-brand mr-auto mr-lg-0" href="#">Auntie</a> 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> 
                 <span class="navbar-toggler-icon"></span> 
             </button>             
@@ -24,10 +24,9 @@
                     <div class="dropdown"> 
                         <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                            <a class="dropdown-item" href="#">North</a> 
-                            <a class="dropdown-item" href="#">South</a> 
-                            <a class="dropdown-item" href="#">East</a> 
-                            <a class="dropdown-item" href="#">West</a> 
+                            <a class="dropdown-item" href="#">Action</a> 
+                            <a class="dropdown-item" href="#">Another action</a> 
+                            <a class="dropdown-item" href="#">Something else here</a> 
                         </div>                         
                     </div>                     
                     <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
@@ -37,20 +36,20 @@
                         <a class="nav-link" href="/deals">Deals</a> 
                     </li>                     
                     <li class="nav-item"> 
-                        <a class="nav-link" href="/events">Events</a> 
+                        <a class="nav-link" href="#">Events</a> 
                     </li>                     
                     <li class="nav-item"> 
-                        <a class="nav-link" href="/register">Register</a> 
+                        <a class="nav-link" href="/events">Register</a> 
                     </li>                     
                     <li class="nav-item"> 
-                        <a class="nav-link" href="/login">Login</a> 
-                    </li>    
-                    <li class="nav-item dropdown "> 
-                        <a class="nav-link dropdown-toggle" href="/dashboard" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
+                        <a class="nav-link" href="/events">Login</a> 
+                    </li>                     
+                    <li class="nav-item dropdown"> 
+                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
                         <div class="dropdown-menu" aria-labelledby="dropdown01"> 
-                            <a class="dropdown-item" href="/profile">Profile</a> 
-                            <a class="dropdown-item" href="/settings">Settings</a> 
-                            <a class="dropdown-item" href="/logout">Log out</a> 
+                            <a class="dropdown-item" href="#">Profile</a> 
+                            <a class="dropdown-item" href="#">Settings</a> 
+                            <a class="dropdown-item" href="#">Sign out</a> 
                         </div>                         
                     </li>                     
                 </ul>                 
@@ -59,40 +58,36 @@
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
-        <main role="main" class="container" style="height: 100vh;"> 
-            <div class="row d-flex justify-content-center"> 
-                <form action="/login" method="post" style="width: 600px;"> 
-                    <div class="form-group"> 
-                        <label for="exampleInputEmail1">Email address</label>                         
-                        <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"/> 
+        <main role="main" class="container"> 
+            <div class="row"> 
+                <div class="col-lg-9 col-md-12"> 
+                    <div class="card flex-md-row box-shadow h-md-250 flex-row mb-2"> 
+                        <div style="width: auto; height: auto; max-height: 160px; max-width: 160px; vertical-align: middle; min-width: 160px; min-height: 160px;" class="d-flex align-items-center"> 
+                            <img src="https://images.unsplash.com/photo-1543363136-3fdb62e11be5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjIwOTIyfQ" alt="Card image cap" class="img-fluid"> 
+                        </div>                         
+                        <div class="card-body flex-column d-flex align-items-start"> 
+                            <h4 class="mb-0">Title</h4> 
+                            <div class="mb-1 text-muted">companyName</div>                             
+                            <p class="card-text mb-auto">Description</p> 
+                        </div>                         
                     </div>                     
-                    <div class="form-group"> 
-                        <label for="exampleInputPassword1">Password</label>                         
-                        <input name ="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"/> 
+                    <div class="card flex-md-row box-shadow h-md-250 flex-row mb-2"> 
+                        <div style="width: auto; height: auto; max-height: 160px; max-width: 160px; vertical-align: middle; min-width: 160px; min-height: 160px;" class="d-flex align-items-center"> 
+                            <img src="1386800206390.jpg" alt="Card image cap" class="img-fluid"> 
+                        </div>                         
+                        <div class="card-body flex-column d-flex align-items-start" style="max-height: 200px;"> 
+                            <h4 class="mb-0">Title</h4> 
+                            <div class="mb-1 text-muted">companyName</div>                             
+                            <p class="card-text mb-auto">Description</p> 
+                        </div>                         
                     </div>                     
-                    <div class="form-check"> 
-                        <label class="form-check-label"> 
-                            <input type="checkbox" class="form-check-input">Remember me
-                        </label>                         
-                    </div>                     
-                    <button type="submit" class="btn btn-primary mt-3">Submit</button>                     
-                </form>                 
+                </div>                 
+                <div class="col-md-3 offcanvas-collapse"> 
+                    <h3>Filter results</h3> 
+                    <p>Work in Progress!</p> 
+                </div>                 
             </div>             
         </main>         
-        <footer class="my-5 pt-5 text-muted text-center text-small"> 
-            <p class="mb-1">&copy; 2019 Auntie.cc</p> 
-            <ul class="list-inline"> 
-                <li class="list-inline-item"> 
-                    <a href="#">Privacy</a> 
-                </li>                 
-                <li class="list-inline-item"> 
-                    <a href="#">Terms</a> 
-                </li>                 
-                <li class="list-inline-item"> 
-                    <a href="#">Support</a> 
-                </li>                 
-            </ul>             
-        </footer>         
         <!-- Bootstrap core JavaScript
     ================================================== -->         
         <!-- Placed at the end of the document so the pages load faster -->         
