--- a/views/events.ejs
+++ b/views/events.ejs
@@ -8,13 +8,13 @@
         <meta name="author" content=""> 
         <title>Offcanvas template for Bootstrap</title>         
         <!-- Bootstrap core CSS -->         
-        <link href="bucket/format/bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
-        <link href="bucket/format/css/auntie.css" rel="stylesheet"> 
+        <link href="assets/css/auntie.css" rel="stylesheet"> 
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
-            <a class="navbar-brand mr-auto mr-lg-0" href="#">Auntie</a> 
+            <a class="navbar-brand mr-auto mr-lg-0" href="/">Auntie</a> 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> 
                 <span class="navbar-toggler-icon"></span> 
             </button>             
@@ -24,9 +24,10 @@
                     <div class="dropdown"> 
                         <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                            <a class="dropdown-item" href="#">Action</a> 
-                            <a class="dropdown-item" href="#">Another action</a> 
-                            <a class="dropdown-item" href="#">Something else here</a> 
+                            <a class="dropdown-item" href="#">North</a> 
+                            <a class="dropdown-item" href="#">South</a> 
+                            <a class="dropdown-item" href="#">East</a> 
+                            <a class="dropdown-item" href="#">West</a> 
                         </div>                         
                     </div>                     
                     <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
@@ -36,25 +37,29 @@
                         <a class="nav-link" href="/deals">Deals</a> 
                     </li>                     
                     <li class="nav-item"> 
-                        <a class="nav-link" href="#">Events</a> 
-                    </li>                     
+                        <a class="nav-link" href="/events">Events</a> 
+                    </li>                
+                    <% if (!user) { %>
                     <li class="nav-item"> 
                         <a class="nav-link" href="/register">Register</a> 
-                    </li>                     
+                    </li>   
                     <li class="nav-item"> 
                         <a class="nav-link" href="/login">Login</a> 
                     </li>    
-                    <li class="nav-item dropdown"> 
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
-                        <div class="dropdown-menu" aria-labelledby="dropdown01"> 
-                            <a class="dropdown-item" href="#">Profile</a> 
-                            <a class="dropdown-item" href="#">Settings</a> 
-                            <a class="dropdown-item" href="#">Sign out</a> 
-                        </div>                         
-                    </li>                     
+                    <% }  %>                  
+                    <% if (user) { %>
+                        <li class="nav-item dropdown "> 
+                            <a class="nav-link dropdown-toggle" href="/dashboard" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
+                            <div class="dropdown-menu" aria-labelledby="dropdown01"> 
+                                <a class="dropdown-item" href="/profile">Profile</a> 
+                                <a class="dropdown-item" href="/settings">Settings</a> 
+                                <a class="dropdown-item" href="/logout">Log out</a> 
+                            </div>                         
+                        </li>                         
+                    <% }  %>
                 </ul>                 
             </div>             
-        </nav>         
+        </nav>                 
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
@@ -86,7 +91,7 @@
         <!-- Placed at the end of the document so the pages load faster -->         
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
-        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
         <script>
         $(document).ready(function () {
             $('[data-toggle="offcanvas"]').on('click', function () {
