--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,13 +8,13 @@
         <meta name="author" content=""> 
         <title>Offcanvas template for Bootstrap</title>         
         <!-- Bootstrap core CSS -->         
-        <link href="bucket/format/bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
-        <link href="bucket/format/css/auntie.css" rel="stylesheet"> 
+        <link href="assets/css/auntie.css" rel="stylesheet"> 
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
-            <a class="navbar-brand mr-auto mr-lg-0" href="#">Auntie</a> 
+            <a class="navbar-brand mr-auto mr-lg-0" href="/">Auntie</a> 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas"> 
                 <span class="navbar-toggler-icon"></span> 
             </button>             
@@ -24,9 +24,10 @@
                     <div class="dropdown"> 
                         <button class="btn dropdown-toggle btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Location</button>                         
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-                            <a class="dropdown-item" href="#">Action</a> 
-                            <a class="dropdown-item" href="#">Another action</a> 
-                            <a class="dropdown-item" href="#">Something else here</a> 
+                            <a class="dropdown-item" href="#">North</a> 
+                            <a class="dropdown-item" href="#">South</a> 
+                            <a class="dropdown-item" href="#">East</a> 
+                            <a class="dropdown-item" href="#">West</a> 
                         </div>                         
                     </div>                     
                     <button class="btn my-2 my-sm-0 btn-light" type="submit">Search</button>                     
@@ -36,59 +37,61 @@
                         <a class="nav-link" href="/deals">Deals</a> 
                     </li>                     
                     <li class="nav-item"> 
-                        <a class="nav-link" href="#">Events</a> 
+                        <a class="nav-link" href="/events">Events</a> 
                     </li>                     
                     <li class="nav-item"> 
                         <a class="nav-link" href="/register">Register</a> 
                     </li>                     
                     <li class="nav-item"> 
                         <a class="nav-link" href="/login">Login</a> 
-                    </li>     
-                    <li class="nav-item dropdown"> 
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
+                    </li>    
+                    <li class="nav-item dropdown "> 
+                        <a class="nav-link dropdown-toggle" href="/dashboard" id="dropdown01" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Controls</a> 
                         <div class="dropdown-menu" aria-labelledby="dropdown01"> 
-                            <a class="dropdown-item" href="#">Profile</a> 
-                            <a class="dropdown-item" href="#">Settings</a> 
-                            <a class="dropdown-item" href="#">Sign out</a> 
+                            <a class="dropdown-item" href="/profile">Profile</a> 
+                            <a class="dropdown-item" href="/settings">Settings</a> 
+                            <a class="dropdown-item" href="/logout">Log out</a> 
                         </div>                         
                     </li>                     
                 </ul>                 
             </div>             
-        </nav>         
+        </nav>               
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
         </div>         
         <main role="main" class="container" style="height: 100vh;"> 
-            <form> 
+            <form action="/register" method="post"> 
                 <div class="form-row"> 
                     <div class="form-group col-md-6"> 
-                        <label for="inputEmail4">Email</label>                         
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email"> 
+                        <label for="email">Email</label>                         
+                        <input type="email" class="form-control" name="email" placeholder="Email"> 
                     </div>                     
                     <div class="form-group col-md-6"> 
-                        <label for="inputPassword4">Password</label>                         
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password"> 
+                        <label for="password">Password</label>                         
+                        <input type="password" class="form-control" name="password" placeholder="Password"> 
                     </div>                     
                 </div>                 
                 <div class="form-group"> 
-                    <label for="inputAddress">Company Name</label>                     
-                    <input type="text" class="form-control" id="inputAddress" placeholder="ABC Pte Ltd"> 
+                    <label for="companyName">Company Name</label>                     
+                    <input type="text" class="form-control" name="companyName" placeholder="ABC Pte Ltd"> 
                 </div>                 
                 <div class="form-row"> 
                     <div class="form-group col-md-6"> 
                         <label for="inputCity">City</label>                         
-                        <input type="text" class="form-control" id="inputCity"> 
+                        <input type="text" class="form-control" name="inputCity"> 
                     </div>                     
                     <div class="form-group col-md-4"> 
-                        <label for="inputState">Business Type</label>                         
-                        <select id="inputState" class="form-control"> 
-                            <option selected="">Choose...</option>                             
-                            <option>...</option>                             
+                        <label for="inputBizType">Business Type</label>                         
+                        <select name="inputBizType" class="form-control" > 
+                            <option selected="">Company</option>     
+                            <option>Franchise</option>                          
+                            <option>Franchisee</option> 
+                            <option>Pop-up retail</option>                              
                         </select>                         
                     </div>                     
                     <div class="form-group col-md-2"> 
                         <label for="inputZip">Postal Code</label>                         
-                        <input type="text" class="form-control" id="inputZip"> 
+                        <input type="text" class="form-control" name="inputZip"> 
                     </div>                     
                 </div>                 
                 <div class="form-group"> 
@@ -101,7 +104,7 @@
                 <button type="submit" class="btn btn-danger">Sign up</button>                 
             </form>             
             <div class="row"> 
-</div>             
+        </div>             
         </main>         
         <footer class="my-5 pt-5 text-muted text-center text-small"> 
             <p class="mb-1">&copy; 2019 Auntie.cc</p> 
