--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,7 +69,10 @@
                     <div class="form-group"> 
                         <label for="exampleInputPassword1">Password</label>                         
                         <input name ="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"/> 
-                    </div>                     
+                    </div>         
+                    <% if (message.length > 0) { %>
+                        <div class="alert alert-danger"><%= message %></div>
+                    <% } %>                            
                     <div class="form-check"> 
                         <label class="form-check-label"> 
                             <input type="checkbox" class="form-check-input">Remember me
