--- a/views/register.ejs
+++ b/views/register.ejs
@@ -93,11 +93,14 @@
                         <label for="inputZip">Postal Code</label>                         
                         <input type="text" class="form-control" name="inputZip"> 
                     </div>                     
-                </div>                 
+                </div>  
+                <% if (message.length > 0) { %>
+                    <div class="alert alert-danger"><%= message %></div>
+                <% } %>                 
                 <div class="form-group"> 
                     <div class="form-check"> 
                         <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox">I have read the Terms and Conditions.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            <input name="agreeTerms" class="form-check-input" type="checkbox">I agree to the Terms and Conditions.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                         </label>
                     </div>                     
                 </div>                 
