--- a/views/events.ejs
+++ b/views/events.ejs
@@ -11,6 +11,21 @@
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
         <link href="assets/css/auntie.css" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+        <style>.app-fab--absolute {
+                    position: fixed;
+                    bottom: 1rem;
+                    right: 1rem;
+                }
+
+                @media (min-width: 1024px) {
+                    .app-fab--absolute {
+                        bottom: 1.5rem;
+                        right: 1.5rem;
+                    }
+                }
+        </style>
     </head>     
     <body class="bg-light"> 
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-danger"> 
@@ -62,7 +77,10 @@
         </nav>                 
         <div class="container"> 
             <div class="row" style="height: 30px;"></div>             
-        </div>         
+        </div>  
+        <button class="mdc-fab app-fab--absolute bg-danger" aria-label="add" onclick="location.href='/events/recommend'">
+            <span class="mdc-fab__icon material-icons">add</span>
+        </button>       
         <main role="main" class="container"> 
             <div class="row"> 
                 <div class="col-lg-9 col-md-12"> 
@@ -91,7 +109,8 @@
         <!-- Placed at the end of the document so the pages load faster -->         
         <script src="assets/js/jquery.min.js"></script>         
         <script src="assets/js/popper.js"></script>         
-        <script src="assets/bootstrap/js/bootstrap.min.js"></script>         
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script> 
+        <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>        
         <script>
         $(document).ready(function () {
             $('[data-toggle="offcanvas"]').on('click', function () {
