--- a/views/item.ejs
+++ b/views/item.ejs
@@ -10,7 +10,7 @@
         <!-- Bootstrap core CSS -->         
         <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
-        <link href="assets/auntie.css" rel="stylesheet"> 
+        <link href="assets/css/auntie.css" rel="stylesheet"> 
         <link href="assets/css/jquery.flexdatalist.min.css" rel="stylesheet"> 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.css" rel="stylesheet"> 
         <style>#my-image,
@@ -85,26 +85,52 @@
                         <label>Description</label>
                         <textarea type="text" rows="6" class="form-control" name="description"></textarea>
                     </div>
-                    <div>
-                        <input type="file" id="fileUpload" name="file" accept="image/png, image/jpeg">
-                    </div>
                     <div class="container mt-5">
                         <div class="row">
-                            <div class="col-6 d-flex justify-content-center align-items-center" style="background-color: #d7d7d7; border-radius: 15px;">
-                                <div class="justify-content-center d-flex">
-                                    <img id="img1" src="assets/images/image.png" style="width: 50%; height: 50%;"/>
-                                    <input id="upload1" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;" onchange="PreviewImage()">
+                            <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
+                                <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                    <img id="img-0" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
+                                    <input id="upload-0" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
                                 </div>
-                                <img id="imgPreview1" src="" style="position: absolute; width: 100%; height: 100%; display: none;"/>
+                                <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                    <img id="preview-0" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
+                                </div>
                             </div>
-                            <div class="col-6">
-                                <img id="img2" src="assets/images/upload-img.png" style="width: 100%;"/>
+                            <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
+                                <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                    <img id="img-1" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
+                                    <input id="upload-1" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                </div>
+                                <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                    <img id="preview-1" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
+                                </div>                            
                             </div>
                         </div>
+                        <div class="row">
+                                <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
+                                    <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                        <img id="img-2" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
+                                        <input id="upload-2" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    </div>
+                                    <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                        <img id="preview-2" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center col-6 " style="padding-top: 50%;">
+                                    <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; background-color: #d7d7d7; border-radius: 15px;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                        <img id="img-3" src="assets/images/image.png" style="width: 40%; height: 40%;"/>
+                                        <input id="upload-3" type="file" name="file" accept="image/png, image/jpeg" style="opacity: 0.0; position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; cursor: pointer;"/>
+                                    </div>
+                                    <div style="position: absolute; top: 0; left: 0; bottom: 0; right: 0; display: none; border-radius: 15px; pointer-events: none;" class="d-inline-flex justify-content-center align-items-center m-1">
+                                        <img id="preview-3" src="" style="width: 100%; height: auto;" class="img-fluid img-rounded img-responsive p-1"/>
+                                    </div>                            
+                                </div>
+                            </div>
                         <div>
                             <img id="cropperImage" style="width: 100%;" src="1334859395411.jpg">
                         </div>
                     </div>
+                    <button type="button" class="btn btn-danger" id="cropbtn">Crop</button>
                     <div class="form-group">Tags
                         <br>
                         <input id='taginput' type='text' placeholder='Additional info' class='flexdatalist form-control' data-min-length='1' multiple='multiple' name='itemTags'>
@@ -112,7 +138,6 @@
                     <button id='subBtn' type="button" class="btn btn-lg btn-danger" onclick="PostForm()">Upload!</button>
                 </form>
                 <hr>
-                <button type="button" class="btn btn-light" id="cropbtn">Crop</button>
             </div>
         </main>         
         <footer class="my-5 pt-5 text-muted text-center text-small"> 
@@ -139,20 +164,109 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.4.3/cropper.min.js"></script>
 
         <script>
+        var cropper0;
+        var crop0;
+        var curPos;
+        var inputInfo = [];
+
         $(document).ready(function () {
             $('[data-toggle="offcanvas"]').on('click', function () {
                 $('.offcanvas-collapse').toggleClass('open');
             });
         });
+
+        $('input').on('change', function() {
+            console.log( this.files[0].name );
+            console.log( this.files[0].type );
+            console.log( this.id );
+
+            curPos = this.id.match(/\d+/)[0];
+
+            var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
+            if(index < 0){
+                inputInfo.push({id: curPos, name: 'c-' + this.files[0].name, type:this.files[0].type });
+            }else{
+                inputInfo[index].name = 'c-' + this.files[0].name;
+                inputInfo[index].type = this.files[0].type;
+            }
+
+
+            var oFReader = new FileReader();
+            oFReader.readAsDataURL(this.files[0]);
+
+            if(cropper0!= null){
+                cropper0.destroy();
+            }
+
+            oFReader.onload = function (oFREvent) {
+                document.getElementById('cropperImage').src = oFREvent.target.result;
+                var image = document.getElementById('cropperImage');
+                console.log( "new cropper!");
+                cropper0 = new Cropper(image, {
+                    aspectRatio: 1 / 1
+                });
+            };   
+        });
         
-        var cropper0;
-            
+
+
+        var showImg = document.getElementById('preview-0');  
+        var formData1  = $("form[id*='formData1']")[0];
+
+
+        $("#cropbtn").click(function() {
+
+            var index = inputInfo.map(function(e) { return e.id; }).indexOf(curPos);
+
+            console.log(curPos);
+            console.log(index);
+            console.log(inputInfo);
+
+            var showImg = document.getElementById('preview-' + curPos);  
+
+            cropper0.getCroppedCanvas({
+                minWidth: 256,
+                minHeight: 256,
+                maxWidth: 4096,
+                maxHeight: 4096,
+                imageSmoothingEnabled: true,
+                imageSmoothingQuality: 'high',
+            }).toBlob((blob) => {              
+                const imagetemp = URL.createObjectURL(blob);
+                showImg.style.display = "block";
+                showImg.src = imagetemp;  
+                inputInfo[index].blob = blob;
+
+            }, inputInfo[index].type);
+        });  
+        
+        
+        function PostForm()
+        {
+            var data = new FormData($("form[id*='formData1']")[0]);
+            for(var i = 0; i< inputInfo.length; i++){
+                data.append("cdata", inputInfo[i].blob, inputInfo[i].name);
+            }
+
+            $.ajax({
+                url: '/item',
+                data: data,
+                cache: false,
+                contentType: false,
+                processData: false,
+                type: 'POST',
+                success: function(data, textStatus, jqXHR){
+                    console.log(data);
+                    window.location.href = data.redirect;
+                }
+            });
+        };
+
         function PreviewImage() {
             var oFReader = new FileReader();
             oFReader.readAsDataURL(document.getElementById("upload1").files[0]);
 
             oFReader.onload = function (oFREvent) {
-                console.log("Display img");
                 document.getElementById('cropperImage').src = oFREvent.target.result;
                 var image = document.getElementById('cropperImage');
                 cropper0 = new Cropper(image, {
@@ -170,49 +284,6 @@
                 });
             };
         };
-
-        var crop1;
-
-        function PostForm()
-        {
-            var data = new FormData($("form[id*='formData1']")[0]);
-            data.append('image_data', crop1, 'cropped.jpg');
-
-            $.ajax({
-                url: '/item',
-                data: data,
-                cache: false,
-                contentType: false,
-                processData: false,
-                type: 'POST',
-                success: function(data){
-                //handle errors...
-                }
-            });
-        };
-
-          var showImg = document.getElementById('imgPreview1');  
-          var formData  = document.getElementById('formData1');
-          $("#cropbtn").click(function() {
-               cropper0.getCroppedCanvas({
-                width: 160,
-                height: 90,
-                minWidth: 256,
-                minHeight: 256,
-                maxWidth: 4096,
-                maxHeight: 4096,
-                fillColor: '#fff',
-                imageSmoothingEnabled: false,
-                imageSmoothingQuality: 'high',
-              }).toBlob((blob) => {              
-                   const image1Url = URL.createObjectURL(blob);
-				   showImg.style.display = "block";
-                   showImg.src = image1Url;
-                   crop1 = blob;
-                });
-          });    
-
-
     </script>         
     </body>     
 </html>
